--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -2,6 +2,7 @@ footer{
 	background: #535454;
 	padding: 3em 0;
 	color: #fff;
+	@include pie-clearfix;
 
 	h3{
 		margin-bottom: 1em;
@@ -11,5 +12,30 @@ footer{
 		background: #fff;
 		color: #eb1414;
 		margin-top: 2em;
+	}
+
+	.column{
+		width: 18%;
+		margin: 0 1%;
+		float: left;
+
+		p{
+			margin: .5em 0;
+		}
+
+		a{
+			color: #fff;
+			text-decoration: none;
+
+			&:hover{
+				color: $red;
+			}
+		}
+
+		li{
+			margin: 0;
+			padding: 0;
+			list-style: none;
+		}
 	}
 }
