--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -66,7 +66,15 @@
 			position: relative;
 			text-transform: uppercase;
 
-			a{ color: $dkblue; text-decoration: none;}
+			a{ 
+				color: $blue; 
+				text-decoration: none;
+				@include transition(all .5s);
+
+				&:hover{
+					color: $dkblue;
+				}
+			}
 
 			&:hover{
 
