--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -565,18 +565,26 @@ strong {
 }
 /* line 69, ../sass/_header.scss */
 .primary-nav ul li a {
-  color: #10244b;
+  color: #396eb6;
   text-decoration: none;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
-/* line 73, ../sass/_header.scss */
+/* line 74, ../sass/_header.scss */
+.primary-nav ul li a:hover {
+  color: #10244b;
+}
+/* line 81, ../sass/_header.scss */
 .primary-nav ul li:hover .dropdown {
   display: block;
 }
-/* line 77, ../sass/_header.scss */
+/* line 85, ../sass/_header.scss */
 .primary-nav ul li .dropdown:hover {
   display: block;
 }
-/* line 82, ../sass/_header.scss */
+/* line 90, ../sass/_header.scss */
 .primary-nav ul .dropdown {
   position: absolute;
   padding: 1em;
@@ -588,19 +596,19 @@ strong {
   left: -.75em;
   z-index: 999;
 }
-/* line 94, ../sass/_header.scss */
+/* line 102, ../sass/_header.scss */
 .primary-nav ul .dropdown li {
   color: #333;
   display: block;
   margin: 0;
   position: static;
 }
-/* line 102, ../sass/_header.scss */
+/* line 110, ../sass/_header.scss */
 .primary-nav ul .search-form {
   display: inline-block;
   margin-left: 2.5em;
 }
-/* line 106, ../sass/_header.scss */
+/* line 114, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="text"] {
   border: 1px solid #396eb6;
   padding: 4px;
@@ -608,7 +616,7 @@ strong {
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 114, ../sass/_header.scss */
+/* line 122, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="submit"] {
   border: none;
   background: #fff;
@@ -620,25 +628,25 @@ strong {
 }
 
 @media screen and (max-width: 1200px) {
-  /* line 129, ../sass/_header.scss */
+  /* line 137, ../sass/_header.scss */
   .site-title {
     float: none;
     margin: 0 auto;
   }
 
-  /* line 134, ../sass/_header.scss */
+  /* line 142, ../sass/_header.scss */
   .primary-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 139, ../sass/_header.scss */
+  /* line 147, ../sass/_header.scss */
   .primary-nav ul li {
     margin-left: 1.5em;
   }
 }
 @media screen and (max-width: 860px) {
-  /* line 147, ../sass/_header.scss */
+  /* line 155, ../sass/_header.scss */
   .primary-nav, .utility-nav {
     display: none;
   }
@@ -648,16 +656,48 @@ footer {
   background: #535454;
   padding: 3em 0;
   color: #fff;
+  *zoom: 1;
 }
-/* line 6, ../sass/_footer.scss */
+/* line 38, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+footer:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/* line 7, ../sass/_footer.scss */
 footer h3 {
   margin-bottom: 1em;
 }
-/* line 10, ../sass/_footer.scss */
+/* line 11, ../sass/_footer.scss */
 footer .button {
   background: #fff;
   color: #eb1414;
   margin-top: 2em;
+}
+/* line 17, ../sass/_footer.scss */
+footer .column {
+  width: 18%;
+  margin: 0 1%;
+  float: left;
+}
+/* line 22, ../sass/_footer.scss */
+footer .column p {
+  margin: .5em 0;
+}
+/* line 26, ../sass/_footer.scss */
+footer .column a {
+  color: #fff;
+  text-decoration: none;
+}
+/* line 30, ../sass/_footer.scss */
+footer .column a:hover {
+  color: #cc3333;
+}
+/* line 35, ../sass/_footer.scss */
+footer .column li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 /* line 1, ../sass/_home.scss */
