--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -187,6 +187,10 @@
 				padding: 0;
 				margin: 2em 5.5%;
 
+				&:nth-child(4n+1){
+					clear: left;
+				}
+
 				img{ width: 100%;}
 			}
 		}
