--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -557,7 +557,11 @@ strong {
 .primary-nav .menu-main-menu-container {
   display: inline-block;
 }
-/* line 62, ../sass/_header.scss */
+/* line 59, ../sass/_header.scss */
+.primary-nav .sub-menu {
+  display: none;
+}
+/* line 66, ../sass/_header.scss */
 .primary-nav ul li {
   display: inline-block;
   margin-top: 3em;
@@ -565,7 +569,7 @@ strong {
   position: relative;
   text-transform: uppercase;
 }
-/* line 69, ../sass/_header.scss */
+/* line 73, ../sass/_header.scss */
 .primary-nav ul li a {
   color: #396eb6;
   text-decoration: none;
@@ -574,19 +578,19 @@ strong {
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
-/* line 74, ../sass/_header.scss */
+/* line 78, ../sass/_header.scss */
 .primary-nav ul li a:hover {
   color: #10244b;
 }
-/* line 81, ../sass/_header.scss */
+/* line 85, ../sass/_header.scss */
 .primary-nav ul li:hover .dropdown {
   display: block;
 }
-/* line 85, ../sass/_header.scss */
+/* line 89, ../sass/_header.scss */
 .primary-nav ul li .dropdown:hover {
   display: block;
 }
-/* line 90, ../sass/_header.scss */
+/* line 94, ../sass/_header.scss */
 .primary-nav ul .dropdown {
   position: absolute;
   padding: 1em;
@@ -598,19 +602,19 @@ strong {
   left: -.75em;
   z-index: 999;
 }
-/* line 102, ../sass/_header.scss */
+/* line 106, ../sass/_header.scss */
 .primary-nav ul .dropdown li {
   color: #333;
   display: block;
   margin: 0;
   position: static;
 }
-/* line 110, ../sass/_header.scss */
+/* line 114, ../sass/_header.scss */
 .primary-nav ul .search-form {
   display: inline-block;
   margin-left: 2.5em;
 }
-/* line 114, ../sass/_header.scss */
+/* line 118, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="text"] {
   border: 1px solid #396eb6;
   padding: 4px;
@@ -618,7 +622,7 @@ strong {
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 122, ../sass/_header.scss */
+/* line 126, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="submit"] {
   border: none;
   background: #fff;
@@ -630,25 +634,25 @@ strong {
 }
 
 @media screen and (max-width: 1200px) {
-  /* line 137, ../sass/_header.scss */
+  /* line 141, ../sass/_header.scss */
   .site-title {
     float: none;
     margin: 0 auto;
   }
 
-  /* line 142, ../sass/_header.scss */
+  /* line 146, ../sass/_header.scss */
   .primary-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 147, ../sass/_header.scss */
+  /* line 151, ../sass/_header.scss */
   .primary-nav ul li {
     margin-left: 1.5em;
   }
 }
 @media screen and (max-width: 860px) {
-  /* line 155, ../sass/_header.scss */
+  /* line 159, ../sass/_header.scss */
   .primary-nav, .utility-nav {
     display: none;
   }
