--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -7,7 +7,12 @@
 		
 		.columns{
 			clear: both;
+			margin: 2em 0;
 			@include pie-clearfix;
+
+			h3{
+				margin: 2em 0;
+			}
 
 			.column{
 				float: left;
