--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -532,7 +532,24 @@ strong {
 .primary-nav .sub-menu {
   display: none;
 }
-/* line 66, ../sass/_header.scss */
+/* line 62, ../sass/_header.scss */
+.primary-nav .sub-menu li {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+/* line 68, ../sass/_header.scss */
+.primary-nav .sub-menu.active {
+  display: block;
+  position: absolute;
+  bottom: -6em;
+  left: 0;
+  padding: 2em;
+  text-align: left;
+  background: #fff;
+  border-top: 0;
+}
+/* line 83, ../sass/_header.scss */
 .primary-nav ul li {
   display: inline-block;
   margin-top: 3em;
@@ -540,7 +557,7 @@ strong {
   position: relative;
   text-transform: uppercase;
 }
-/* line 73, ../sass/_header.scss */
+/* line 90, ../sass/_header.scss */
 .primary-nav ul li a {
   color: #396eb6;
   text-decoration: none;
@@ -549,19 +566,19 @@ strong {
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
-/* line 78, ../sass/_header.scss */
+/* line 95, ../sass/_header.scss */
 .primary-nav ul li a:hover {
   color: #10244b;
 }
-/* line 85, ../sass/_header.scss */
+/* line 102, ../sass/_header.scss */
 .primary-nav ul li:hover .dropdown {
   display: block;
 }
-/* line 89, ../sass/_header.scss */
+/* line 106, ../sass/_header.scss */
 .primary-nav ul li .dropdown:hover {
   display: block;
 }
-/* line 94, ../sass/_header.scss */
+/* line 111, ../sass/_header.scss */
 .primary-nav ul .dropdown {
   position: absolute;
   padding: 1em;
@@ -573,19 +590,19 @@ strong {
   left: -.75em;
   z-index: 999;
 }
-/* line 106, ../sass/_header.scss */
+/* line 123, ../sass/_header.scss */
 .primary-nav ul .dropdown li {
   color: #333;
   display: block;
   margin: 0;
   position: static;
 }
-/* line 114, ../sass/_header.scss */
+/* line 131, ../sass/_header.scss */
 .primary-nav ul .search-form {
   display: inline-block;
   margin-left: 2.5em;
 }
-/* line 118, ../sass/_header.scss */
+/* line 135, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="text"] {
   border: 1px solid #396eb6;
   padding: 4px;
@@ -593,7 +610,7 @@ strong {
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 126, ../sass/_header.scss */
+/* line 143, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="submit"] {
   border: none;
   background: #fff;
@@ -605,25 +622,25 @@ strong {
 }
 
 @media screen and (max-width: 1200px) {
-  /* line 141, ../sass/_header.scss */
+  /* line 158, ../sass/_header.scss */
   .site-title {
     float: none;
     margin: 0 auto;
   }
 
-  /* line 146, ../sass/_header.scss */
+  /* line 163, ../sass/_header.scss */
   .primary-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 151, ../sass/_header.scss */
+  /* line 168, ../sass/_header.scss */
   .primary-nav ul li {
     margin-left: 1.5em;
   }
 }
 @media screen and (max-width: 860px) {
-  /* line 159, ../sass/_header.scss */
+  /* line 176, ../sass/_header.scss */
   .primary-nav, .utility-nav {
     display: none;
   }
