--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -538,18 +538,18 @@ strong {
   margin: 0;
   padding: 0;
 }
-/* line 68, ../sass/_header.scss */
-.primary-nav .sub-menu.active {
+/* line 69, ../sass/_header.scss */
+.primary-nav .sub-menu .menu-item-has-children:hover .sub-menu {
   display: block;
   position: absolute;
   bottom: -6em;
-  left: 0;
+  left: -1.4em;
   padding: 2em;
   text-align: left;
   background: #fff;
   border-top: 0;
 }
-/* line 83, ../sass/_header.scss */
+/* line 85, ../sass/_header.scss */
 .primary-nav ul li {
   display: inline-block;
   margin-top: 3em;
@@ -557,7 +557,7 @@ strong {
   position: relative;
   text-transform: uppercase;
 }
-/* line 90, ../sass/_header.scss */
+/* line 92, ../sass/_header.scss */
 .primary-nav ul li a {
   color: #396eb6;
   text-decoration: none;
@@ -566,19 +566,19 @@ strong {
   -o-transition: all 0.5s;
   transition: all 0.5s;
 }
-/* line 95, ../sass/_header.scss */
+/* line 97, ../sass/_header.scss */
 .primary-nav ul li a:hover {
   color: #10244b;
 }
-/* line 102, ../sass/_header.scss */
+/* line 104, ../sass/_header.scss */
 .primary-nav ul li:hover .dropdown {
   display: block;
 }
-/* line 106, ../sass/_header.scss */
+/* line 108, ../sass/_header.scss */
 .primary-nav ul li .dropdown:hover {
   display: block;
 }
-/* line 111, ../sass/_header.scss */
+/* line 113, ../sass/_header.scss */
 .primary-nav ul .dropdown {
   position: absolute;
   padding: 1em;
@@ -590,19 +590,19 @@ strong {
   left: -.75em;
   z-index: 999;
 }
-/* line 123, ../sass/_header.scss */
+/* line 125, ../sass/_header.scss */
 .primary-nav ul .dropdown li {
   color: #333;
   display: block;
   margin: 0;
   position: static;
 }
-/* line 131, ../sass/_header.scss */
+/* line 133, ../sass/_header.scss */
 .primary-nav ul .search-form {
   display: inline-block;
   margin-left: 2.5em;
 }
-/* line 135, ../sass/_header.scss */
+/* line 137, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="text"] {
   border: 1px solid #396eb6;
   padding: 4px;
@@ -610,7 +610,7 @@ strong {
   font-family: "Open Sans";
   font-weight: 300;
 }
-/* line 143, ../sass/_header.scss */
+/* line 145, ../sass/_header.scss */
 .primary-nav ul .search-form input[type="submit"] {
   border: none;
   background: #fff;
@@ -622,25 +622,25 @@ strong {
 }
 
 @media screen and (max-width: 1200px) {
-  /* line 158, ../sass/_header.scss */
+  /* line 160, ../sass/_header.scss */
   .site-title {
     float: none;
     margin: 0 auto;
   }
 
-  /* line 163, ../sass/_header.scss */
+  /* line 165, ../sass/_header.scss */
   .primary-nav ul {
     float: none;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 168, ../sass/_header.scss */
+  /* line 170, ../sass/_header.scss */
   .primary-nav ul li {
     margin-left: 1.5em;
   }
 }
 @media screen and (max-width: 860px) {
-  /* line 176, ../sass/_header.scss */
+  /* line 178, ../sass/_header.scss */
   .primary-nav, .utility-nav {
     display: none;
   }
